# tab-model-eval

./: pyproject.toml  requirements.txt
data/eval/handcrafted/: add_import_easy.md  add_import_hard.md  fibonacci.md  fibonacci_cached.md  git_commit_simple.md  git_new_pr.md  git_pull_simple.md  git_push_simple.md  hello_world.md  hello_world_insert.md  palindrome.md  simple_calc.md  simple_calc_correct_error.md
data/eval/unit_tests/: eval_cursor_movement.md  eval_delete.md  eval_file_switch.md  eval_insert.md  eval_replace.md  eval_terminal_invocation.md
data/handcrafted_traces/: create_fibonnacci.md  fibonacci.md  fibonacci_cached.md  hello_world.md  insert_hello_world.md  palindrom_checker.md  palindrome.md  simple_calc.md  simple_calc_correct_error.md
data/incremental_test_cases/: insert_hello_world.jsonl  tmp copy.json
data/prompts/: command_evaluation_prompt.txt  command_evaluation_prompt_with_context.txt  equivalence_v1.md  judge_prompt_v2.md  judge_prompt_v2_with_context.md  judge_system_prompt_v2.md  judge_v2.md  minimal_v1.md  simple_v1.md  swe_mini_v0.md  swe_mini_v1.md  system_prompt_eval_judger.md
scripts/: trace_to_testcases.py
src/evaluation/: evaluate_client.py  sglang_eval.py  sglang_generations.py
src/input_pipeline/: handcrafted_to_testcases.py  trace_to_testcases.py  validation_to_testcases.py
src/serving/: launch_sglang.sh  launch_sglang_qwen30b.sh
